--- a/InsumosAso_mod.form
+++ b/InsumosAso_mod.form
@@ -63,7 +63,7 @@
                       <Component id="label_c4" min="-2" max="-2" attributes="0"/>
                       <Component id="Act_rb" alignment="0" min="-2" pref="19" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="18" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
               </Group>
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace min="-2" pref="17" max="-2" attributes="0"/>
@@ -147,7 +147,7 @@
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Group type="102" alignment="0" attributes="0">
                                   <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace min="0" pref="24" max="32767" attributes="0"/>
+                                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                               </Group>
                               <Component id="id" alignment="0" max="32767" attributes="0"/>
                           </Group>
@@ -226,7 +226,7 @@
                     <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="ff" green="ff" red="ff" type="rgb"/>
                     </Property>
-                    <Property name="text" type="java.lang.String" value="Agregar Material"/>
+                    <Property name="text" type="java.lang.String" value="Modificar Maquina"/>
                   </Properties>
                 </Component>
                 <Component class="javax.swing.JLabel" name="id">
@@ -249,7 +249,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Roboto" size="24" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Cantidad"/>
+            <Property name="text" type="java.lang.String" value="Proporci&#xf3;n"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="proporcion">
